force-app/main/default/objects/Account/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Maximum credit extended to this customer. Meaningful only on Single_Customer and Parent_Customer record types (branches do not carry credit). See ADR-0001 and ADR-0003.</description>
    <inlineHelpText>Maximum credit available to this customer (parent/single only).</inlineHelpText>
</CustomField>