force-app/main/default/objects/Account/fields/Credit_Used__c.field-meta.xml
<CustomField>
    <fullName>Credit_Used__c</fullName>
    <label>Credit Used</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Current credit exposure for this customer. Maintained by automation in Phase 2 (Apex/Flow), NOT a roll-up summary because Order relates to Account via Lookup, not Master-Detail. See ADR-0003.</description>
    <inlineHelpText>Credit currently in use (calculated by automation).</inlineHelpText>
</CustomField>