force-app/main/default/objects/Account/fields/Onboarding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Stage__c</fullName>
    <label>Onboarding Stage</label>
    <type>Picklist</type>
    <description>Onboarding progress. Hybrid model: Sales Rep initiates, onboarding team validates and activates (discovery Scene 2). NOTE: value set proposed during materialization - confirm with business.</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
                <default>true</default>
                <label>Initiated</label>
            </value>
            <value>
                <fullName>In Validation</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>