force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <description>Payment terms for this customer. New customers start at COD; Net terms granted based on history. See discovery Scene 1.</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COD</fullName>
                <default>true</default>
                <label>COD (Cash on Delivery)</label>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>