force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <description>Customer segment driving which segment Pricebook applies. See ADR-0002.</description>
    <inlineHelpText>Determines the segment Pricebook used for this customer's orders.</inlineHelpText>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
                <default>true</default>
                <label>Small Business</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>