force-app/main/default/objects/Account/recordTypes/Branch_Customer.recordType-meta.xml
<RecordType>
    <fullName>Branch_Customer</fullName>
    <label>Branch Customer</label>
    <active>true</active>
    <description>Branch of a parent customer: receives orders but does NOT manage credit. Linked to its parent via ParentId. See ADR-0001.</description>
</RecordType>