force-app/main/default/objects/Account/recordTypes/Parent_Customer.recordType-meta.xml
<RecordType>
    <fullName>Parent_Customer</fullName>
    <label>Parent Customer</label>
    <active>true</active>
    <description>Legal parent entity: holds credit limit, exposure and billing. Does NOT receive orders directly. See ADR-0001.</description>
</RecordType>