force-app/main/default/objects/Account/recordTypes/Single_Customer.recordType-meta.xml
<RecordType>
    <fullName>Single_Customer</fullName>
    <label>Single Customer</label>
    <active>true</active>
    <description>Single-location customer: places orders AND manages its own credit. See ADR-0001.</description>
</RecordType>